--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@ freed colored person they still get a reward
         <div class="checkpoint">
             <h2>september 18 1850</h2>
             <p>
-                Info
+                 the compromise happened those 
+effected states from the Louisiana purchase
+ only, the compromise stated that any states
+ in this group would become free states for 
+colored people meaning that slaves were no
+ longer legal in these states with angered the 
+southerners because they relied heavily on slave labor.
+
             </p>
         </div>
         <div class="checkpoint">
